OF-197: Keep track of jar files loaded by each plugin; unload jars when the plugin is destroyed
git-svn-id: http://svn.igniterealtime.org/svn/repos/openfire/trunk@13395 b35dd754-fafc-0310-a699-88a17e54d16e