@@ -22,9 +22,13 @@ package org.jivesoftware.openfire.container;
 
 import java.io.File;
 import java.io.FilenameFilter;
+import java.net.JarURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.net.URLConnection;
+import java.util.ArrayList;
+import java.util.List;
 
 import org.jivesoftware.openfire.XMPPServer;
 import org.slf4j.Logger;
@@ -44,7 +48,7 @@ import org.slf4j.LoggerFactory;
 public class PluginClassLoader extends URLClassLoader {
 
 	private static final Logger Log = LoggerFactory.getLogger(PluginClassLoader.class);
-
+	private List<JarURLConnection> cachedJarFiles = new ArrayList<JarURLConnection>();
     public PluginClassLoader() {
         super(new URL[] {}, findParentClassLoader());
     }
@@ -93,14 +97,14 @@ public class PluginClassLoader extends URLClassLoader {
             if (jars != null) {
                 for (int i = 0; i < jars.length; i++) {
                     if (jars[i] != null && jars[i].isFile()) {
+                    	String jarFileUri = jars[i].toURI().toString()  + "!/";
                         if (developmentMode) {
                             // Do not add plugin-pluginName.jar to classpath.
                             if (!jars[i].getName().equals("plugin-" + directory.getName() + ".jar")) {
-                                addURL(jars[i].toURL());
+                                addURLFile(new URL("jar", "", -1, jarFileUri));
                             }
-                        }
-                        else {
-                            addURL(jars[i].toURL());
+                        } else {
+	                        addURLFile(new URL("jar", "", -1, jarFileUri));
                         }
                     }
                 }
@@ -111,8 +115,39 @@ public class PluginClassLoader extends URLClassLoader {
         }
     }
 
+    /**
+     * Add the given URL to the classpath for this class loader, 
+     * caching the JAR file connection so it can be unloaded later
+     * 
+     * @param file URL for the JAR file or directory to append to classpath
+     */
     public void addURLFile(URL file) {
+    	try {
+        	// open and cache JAR file connection 
+        	URLConnection uc = file.openConnection();
+        	if (uc instanceof JarURLConnection) {
+            	uc.setUseCaches(true);
+            	((JarURLConnection) uc).getManifest();
+            	cachedJarFiles.add((JarURLConnection)uc);
+        	}
+    	} catch (Exception e) {
+    		Log.warn("Failed to cache plugin JAR file: " + file.toExternalForm());
+    	}
         addURL(file);
+    }
+    
+    /**
+     * Unload any JAR files that have been cached by this plugin
+     */
+    public void unloadJarFiles() {
+        for (JarURLConnection url : cachedJarFiles) {
+        	try {
+        		Log.info("Unloading plugin JAR file " + url.getJarFile().getName());
+        		url.getJarFile().close();
+        	} catch (Exception e) {
+        		Log.error("Failed to unload JAR file", e);
+        	}
+        }
     }
 
     /**
